# python-pip-common

./: .envrc  .gitignore  README.Debian.md  README.md  requirements.txt  setup.cfg
debian/: changelog  control  preinst  rules
src/common/: __init__.py  aio.py  arg.py  cmd.py  dbg.py  dfs.py  enc.py  mail.py  ns.py  num.py  own.py  pct.py  shm.py  ts.py  url.py  xr.py
