[metadata]
name = common.local
version = 0.1
author = Silver Aloe
author_email = 91305009+silveraloe@users.noreply.github.com
description = Common utilities for all Python applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/koreachain/python-pip-common
project_urls =
    Bug Tracker = https://gitlab.com/koreachain/python-pip-common/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    cryptography>=3.4.7
    docopt-ng>=0.7.2
    fasteners>=0.17.3
    fastlogging>=1.0.0
    getch>=1.0
    numpy>=1.18
    orjson>=3.7.5
    python-box>=7.0
    pudb>=2020.1
    PyYAML>=5.4.1
    requests>=2.26.0
    tenacity>=8.0.1
    uvloop>=0.15.2

[options.extras_require]
recommends =
    oci>=2.52.1

[options.packages.find]
where = src
